--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "lite-server": "^2.6.1"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.0.0",
     "bootstrap": "^5.1.3",
     "bootstrap-social": "^5.1.1",
     "express": "^4.17.3",
